Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/T6425594.out
T6425594.java:10:28: compiler.warn.self.ref: x
T6425594.java:11:26: compiler.err.illegal.forward.ref
1 error
1 warning
